--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
     <nav style="background-color: #673ab7; height: 56px; width: 100%"></nav>
     <div id="loading"></div>
   </app-root>
-  <no-script>
-    <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem; text-align: center;">
+  <noscript>
+    <h3 style="font-family: Helvetica; margin: 2rem; text-align: center;">
         Sorry, but app is not available without javascript
     </h3>
-  </no-script>
+  </noscript>
 </body>
 </html>
